--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class = Enemies>
             <div id = "EnemyOrc" style = "display: none;"></div>
             <div id = "EnemyMage" style = "display: none;"></div>
-            <div id = "EnemyTownsfolk" style = "display: none;"></div>
+            <div id = "EnemyTownsfolk" style = "display: block;"></div>
         </div>
         <div class = "Player" id = "Player" style = "display: none;">
             <div id = "PlayerChar"></div>
@@ -62,21 +62,7 @@
 
 <div class ="bgImage"></div>
 
-
-<!--This text will be gone and later be in the popup for the player
-<h1>Choose between Physical, Magic or Intimidate.</h1>
-<h2>Physical : Fight Orcs</h2>
-<h2>Magic : Fight Mages</h2>
-<h2>Intimidate : Fight Townsfolk</h2>
--->
-<!--
-<img src="bg_o.png" alt="Background Image" id="BackgroundImage" style="float:left;width:50%;height:100%;">
-<img src="adventurer_o_idle.png" alt="Adventurer Image" id="AdventurerImage">
-
-<img src="orc_o.png" alt="Orc Image" id="OrcImage">
-<img src="mage_o.png" alt="Mage Image" id="MageImage">
-<img src="" alt="Townsfolk Image" id="TownsfolkImage">
--->
+<!-- Comment -->
 <script>
 
 var playerHp = 100;
